# adacta

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
.circleci/: config.yml
backend/: Cargo.toml  README.md  __init__.py  adacta.yaml  pylint.rc  rustfmt.toml
backend/src/: auth.rs  config.rs  main.rs  meta.rs  model.rs  utils.rs
backend/src/adacta/backend/: __main__.py  config.py  index.py  manifest.py  pipeline.py  storage.py  utils.py
backend/src/adacta/backend/web/: __init__.py  frontend.py
backend/src/adacta/backend/web/api/: __init__.py  bundles.py  search.py  upload.py
backend/src/api/: inbox.rs  repo.rs  upload.rs
backend/src/index/: elasticsearch.rs  mod.rs
backend/src/juicer/: docker.rs  mod.rs
backend/src/juicer/docker/: mod.rs  mod.rs.bak
backend/src/juicer/docker/test/: extract.rs  mod.rs
backend/src/pigeonhole/: bayesian.rs  dumb.rs  mod.rs
backend/src/repo/: mod.rs
backend/src/repository/: mod.rs
backend/src/suggester/: bayesian.rs  dumb.rs  mod.rs
backend/src/web/: frontend.rs  mod.rs  test.rs
backend/src/web/api/: archive.rs  auth.rs  error.rs  inbox.rs  labels.rs  mod.rs  repo.rs  search.rs  upload.rs
cli/: Cargo.toml
cli/src/: archive.rs  config.rs  inbox.rs  main.rs  output.rs  upload.rs
cli/src/client/: auth.rs  mod.rs
contrib/: scandoc
contrib/docker/juicer/: Dockerfile  juicer.mk  juicer.sh
contrib/docker/stack/: README.md  docker-compose.yml
frontend/: Gruntfile.coffee  README.md  angular.json  bower.json  karma.conf.js  package-lock.json  package.json  proxy.conf.json
frontend/bower_components/knockoutjs/: .bower.json
frontend/bower_components/pagerjs/: .bower.json
frontend/bower_components/pdfjs-dist/: .bower.json
frontend/src/: api.coffee  index.html  site.coffee  site.html  site.less  styles.less  utils.coffee
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
frontend/src/app/interceptors/: error.interceptor.ts  jwt.interceptor.ts
frontend/src/app/modules/inbox/: empty.component.html  empty.component.ts  inbox-routing.module.ts  inbox.component.html  inbox.component.ts  inbox.module.ts  review.component.html  review.component.ts
frontend/src/app/modules/login/: login.component.html  login.component.ts  login.module.ts
frontend/src/app/modules/search/: search-routing.module.ts  search.component.html  search.module.ts
frontend/src/app/modules/tags/: tags.component.ts  tags.module.ts
frontend/src/app/services/: auth.service.ts  inbox.service.ts
frontend/src/app/shared/: auth.interceptor.ts  shared.module.ts
frontend/src/app/shared/components/document/: document.component.html  document.component.less  document.component.ts
frontend/src/app/shared/components/preview/: preview.component.html  preview.component.less  preview.component.ts
frontend/src/app/shared/guards/: auth.guard.ts
frontend/src/app/shared/services/: auth.service.ts  inbox.service.ts  repo.service.ts
frontend/src/include/: navbar.html
frontend/src/pages/: archive.coffee  archive.html  inbox.coffee  inbox.html
juicer/: Dockerfile  enhance.sh  juicer.sh
proto/: Cargo.toml
proto/src/: api.rs  model.rs
src/: auth.rs  config.rs  main.rs  meta.rs  model.rs  utils.rs
src/api/: auth.rs  inbox.rs  mod.rs  repo.rs  search.rs  upload.rs
src/index/: elasticsearch.rs  mod.rs
src/juicer/: docker.rs
src/repo/: mod.rs
