[package]
name = "adacta"
version = "0.1.0"
authors = ["Dustin Frisch <fooker@lab.sh>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "async" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "async" }
uuid = { version = "0.8", features = ["v4"] }
base58 = "0.1.0"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
async-trait = "0.1"
elasticsearch = "7.6.1-alpha.1"
bollard = "0.5"
futures = "0.3"
async-std = { version = "1.5", features = [ "attributes" ] }
tokio-util = { version = "0.3", features = [ "compat" ] }
