[package]
name = "adacta"
version = "0.1.0"
authors = ["Dustin Frisch <fooker@lab.sh>"]
description = "Personal Document Archiving"

edition = "2018"

[dependencies]
clap = "2"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "async" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "async" }
rust-embed = { git = "https://github.com/pyros2097/rust-embed.git", branch = "master" }
uuid = { version = "0.8", features = ["v4"] }
base58 = "0.1"
base64 = "0.12"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.8"
async-trait = "0.1"
elasticsearch = "7.6.1-alpha.1"
bollard = "0.5"
tokio = { version = "0.2", features = [ "full" ] }
bytes = "0.5"
maplit = "1"
bcrypt = "0.7"
jsonwebtoken = "7.1"
