[package]
name = "adacta"
version = "0.1.0"
authors = ["Dustin Frisch <fooker@lab.sh>"]
description = "Personal Document Archiving"
repository = "https://github.com/adacta-io/adacta"
license = "MIT"
readme = "../README.md"
keywords = ["pdf", "documents", "archive", "search"]
categories = ["application"]

edition = "2018"

[dependencies]
clap = "2"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rust-embed = { git = "https://github.com/pyros2097/rust-embed.git", branch = "master" }
uuid = { version = "0.8", features = ["v4"] }
base58 = "0.1.0"
base64 = "0.12.3"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.8"
async-trait = "0.1"
elasticsearch = "7.6.1-alpha.1"
bollard = "0.5"
tokio = { version = "0.2", features = [ "full" ] }
futures = "0.3.5"
bytes = "0.5"
maplit = "1"
bcrypt = "0.7"
jsonwebtoken = "7.1"
bincode = "1.2"
hyperx = "1.1.0"
log = "0.4.11"
proto = { path = "proto" }

[dev-dependencies]
tempfile = "3.1.0"
mockall = "0.8.0"
rand = "0.7.3"